--- a/src/index.jade
+++ b/src/index.jade
@@ -3,10 +3,11 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Return of Inspector Web
+    title The Return of Inspector Web: Web Components a Year Later
 
-    //- Check out 'src/bower_components/prism/' for available themes
-    link(rel='stylesheet', type='text/css', href='bower_components/prism/themes/prism-tomorrow.css')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One|Noto+Serif:400,400italic')
+    link(rel='stylesheet', type='text/css', href='bower_components/prism/themes/prism-coy.css')
+    link(rel='stylesheet', type='text/css', href='bower_components/prism/plugins/line-numbers/prism-line-numbers.css')
 
     link(rel='stylesheet', type='text/css', href='styles/main.css')
 
@@ -15,82 +16,161 @@ html
     article
 
       // Intro talk & self
-      section
-        h1 Return of Inspector Web
-        p [Pink panther or some inspector as bg]
-        p [Music should be playing]
+      section.title
+        h1 The Return of Inspector Web
+        img(src="img/inspector-pony.png", class="pony")
+        div
+          a(href="http://stephastated.deviantart.com/art/go-go-gadget-PONY-261977395")
+            small Inspector Pony by 123inkt.nl
 
-      section
-        h2.left Lots to cover:
-        h2.right Questions over drinks
 
-      section
-        h2 I'm Angelina Fabbro
-        p Vancouver background
+      section.cover
+        img(src="img/vancouver-rain.gif")
+        div.tint
+          h2 I'm Angelina Fabbro
+          h2 I'm from Vancouver, Canada
+          h2 @angelinamagnum
+          h2 follow for slides &amp; pandavangelism
 
-      section
-        h2.left I work at Mozilla
-        h2.right We try and do good things for the web &amp; humanity
-        p [background red panda freaking out over pumpkin]
+      section.cover
+        img(src="img/firefox.jpg")
 
-      section
-        h2.left Once upon a time...
-        h2.right ...I gave a talk on web components
-        p [screenshot of JSConf EU 2012 as BG]
-        p [music should wrap up about now]
+      section.cover
+        img(src="img/JSConfEU2012.jpg")
+        div.tint
+          h2 Once upon a time...
+          h2 ...I gave a talk on web components
+          a(href="http://www.youtube.com/watch?v=JNjnv-Gcpnw") 
+            h3 Watch here
 
       // Intro web components - terminology & problems they solve
 
-      section
+      section.white
         h2 Web Components are the new HTML 5
-        p [background is a picture of a nice hat, cat in the hat hat!]
-
-      section
-        h2 The point?
-        p [bg is something pointy]
+        img(src="img/webcomponents.png")
 
       // Go through each web component technology  
       // ---
       // Shadow DOM
 
-      section
-        h2 Shadow DOM
+      section.cover
+        img(src="img/spooky.gif")
+        h2.tint Shadow DOM
 
       section
-        code.language-html
+        h2 Key Concepts:
+        ul
+          li
+            h3 Encapsulation
+          li
+            h3 Rendering of Shadow Tree replaces that of Host Tree
+
+      section
+        img(src="img/did-you-know.jpg", class="full-height")
+
+      section
+        ul
+          li 
+            img(src="http://lorempixel.com/200/200/cats/1/")
+          li
+            img(src="http://lorempixel.com/200/200/cats/2/")
+          li
+            img(src="http://lorempixel.com/200/200/cats/3/")
+
+      section
+        code.language-markup
           pre.
-            <ul class="stories">
-                <li><a href="//example.com/stories/1">A story</a></li>
-                <li><a href="//example.com/stories/2">Another story</a></li>
-                <li class="breaking"><a href="//example.com/stories/3">Also a story</a></li>
-                <li><a href="//example.com/stories/4">Yet another story</a></li>
-                <li><a href="//example.com/stories/4">Awesome story</a></li>
-                <li class="breaking"><a href="//example.com/stories/5">Horrible story</a></li>
+            <ul id="cats">
+                <li>
+                  <img src="http://lorempixel.com/200/200/cats/1/">
+                </li>
+                <li class="awesome">
+                  <img src="http://lorempixel.com/200/200/cats/2/">
+                </li>
+                <li class="awesome">
+                  <img src="http://lorempixel.com/200/200/cats/3/">
+                </li>
             </ul>
 
       section
-        h2 CSS for Shadow Trees
+        code.language-javascript
+          pre.
+            var cats = document.getElementById('cats');
+            var shadow_cats = cats.createShadowRoot();
+            shadow_cats.innerHTML = "<li>The awesome cats are:</li><content select='.awesome'></content>"
 
       section
-        h2 Reaching Out
+        ul
+          li The awesome cats are:
+          li
+            img(src="http://lorempixel.com/200/200/cats/2/")
+          li
+            img(src="http://lorempixel.com/200/200/cats/3/")
 
       section
-        h2 The @host rule
+        h2 DEMO!
+        h2 http://afabbro.github.io/webcomponents-native
+        h2 http://github.com/afabbro/webcomponents-native
+
+      section
+        h2 The @host rule for CSS
+
+      section
+        code.language-css
+          pre.
+            @host {
+              display: block;
+              padding: 40px;
+              border: 2px dotted purple;
+            }
+
+      section
+        ul.host-example
+          li The awesome cats are:
+          li
+            img(src="http://lorempixel.com/200/200/cats/4/")
+          li
+            img(src="http://lorempixel.com/200/200/cats/5/")   
+
+      section
+        h2 Pseudo-Elements
 
       section
         h2 ::content
-
-      section
-        h2 Reaching In
+        h2 formerly ::distributed(li)
+        h2 .awesome::content li
 
       section
         h2 ::part
 
       section
-        h2 Specification Status
+        code.language-javascript
+          pre.
+            var component = document.createElement('div');
+            var root = component.createShadowRoot();
+            var control = document.createElement('div');
+            control.pseudo = 'control';
+            root.appendChild(control);
 
       section
-        h2 Browser Support
+        code.language-css
+          pre.
+            component::part(control) {
+              width: 20px;
+              height: 20px;
+              color: blue;
+              border-radius: 20px
+            }
+
+      section
+        h2 Shadow DOM Browser Support
+        ul
+          li
+            h2.maybe Firefox: SOON
+          li
+            h2.yay Chrome: YES
+          li
+            h2.boo IE: NO
 
       // HTML Templates
 
@@ -98,13 +178,56 @@ html
         h2 HTML Templates
 
       section
-        h2 [explanation about HTML templates, code]
+        code.language-markup
+          pre.
+            <template id="cats-template">
+              <style scoped>
+                ul {
+                  list-style-type: none;
+                }
+                ul li {
+                  padding: 2%;
+                  border-radius: 10px;
+                  border: 2px dashed blue;
+                  float: left;
+                  margin: 0 5% 5% 0;
+                }
+              </style>
+              <ul>
+                <li><img src="http://lorempixel.com/300/300/cats/2/"></li>
+                <li><img src="http://lorempixel.com/300/300/cats/4/"></li>
+                <li><img src="http://lorempixel.com/300/300/cats/6/"></li>
+              </ul>
+            </template>
+      section
+        code.language-javascript
+          pre.
+            var host = document.getElementById('host');
+            var shadow = host.createShadowRoot();
+            shadow.appendChild(document.getElementById('cats-template').content);
 
       section
-        h2 Specification Status
+        h2 DEMO!
 
       section
-        h2 Browser Support
+        h2 &lt;style scoped&gt; Browser Support
+        ul
+          li
+            h2.yay Firefox: YES
+          li
+            h2.maybe Chrome: YES (Flag)
+          li
+            h2.boo IE: NO
+      
+      section
+        h2 HTML Templates Browser Support
+        ul
+          li
+            h2.yay Firefox: YES
+          li
+            h2.yay Chrome: YES
+          li
+            h2.boo IE: NO
 
       // HTML Imports
 
@@ -112,160 +235,287 @@ html
         h2 HTML Imports
 
       section
-        h2 [explanation about HTML Imports, code]
+        code.language-markup
+          pre.
+            <link rel="import" href="import-cats.html">
 
       section
-        h2 Specification Status
+        h2 DEMO!
 
       section
         h2 Browser Support
+        ul
+          li
+            h2.maybe Firefox: SOON
+          li
+            h2.maybe Chrome: YES (Flag)
+          li
+            h2.boo IE: NO
 
       // Custom Elements
 
       section
-        h2.left Custom Elements
-        h2.right (imperative)
+        h2 Custom Elements
+        h2 &lt;custom-element&gt;&lt;/custom-element&gt;
 
       section
-        h2 [explanation about custom elements, code]
+        code.language-javascript
+          pre.
+            var XFoo = document.register('my-widget');
+            document.body.appendChild(new MyWidget());
 
       section
-        h2 Specification Status
+        code.language-javascript
+          pre.
+            var MyWidget = document.register('my-widget', {
+              prototype: Object.create(HTMLElement.prototype)
+            });      
 
       section
-        h2 Browser Support
+        h2 Custom Tags
+        h2 vs 
+        h2 Type Extensions
 
       section
-        h2.left Custom Elements
-        h2.right (declarative)
+        code.language-javascript
+          pre.
+            document.createElement('my-widget')
+            new MyWidget()
 
       section
+        code.language-markup
+          pre.
+            <my-widget></my-widget>
+            <div is="my-widget"></div>
+
+      section
+        h2 :unresolved 
+
+      section
+        code.language-css
+          pre.
+            my-widget {
+              opacity: 1;
+              transition: opacity 200ms;
+            }
+
+            my-widget:unresolved {
+              opacity: 0;
+            }
+
+      section
+        h2 Browser Support for document.register
+        ul
+          li
+            h2.maybe Firefox: YES (Pref)
+          li
+            h2.maybe Chrome: YES (Flag)
+          li
+            h2.boo IE: NO
+
+      section
+        h2 More On Custom Tags Shortly!
+
+      section
+        h2 Type Extensions
         h2 aka &lt;element&gt; element
-        p [silly picture of element symbol of 'nonsense element']
-        p [price is right horn on click]
+
 
       section
-        h2 [explain what the technology was supposed to be like]
+        h2 Takin' a Nap Because Problems
+        h2 Removed from the spec
+        h3
+          a(href="http://lists.w3.org/Archives/Public/public-webapps/2013JulSep/0287.html") Extensive details here
 
       section
-        h2 [explain problem]
+        h2 Obligatory mention: Decorators
 
       section
-        h2 [explain potential solutions with ES6 subclasses]
+        code.language-markup
+          pre.
+            <decorator id="details-open">
+              <template>
+                  <a id="summary">
+                    &blacktriangledown;
+                    <content select="summary"></content>
+                  </a>
+                  <content></content>
+              </template>
+            </decorator>
 
       section
-        h2 Obligatory mention:
-        
-      section
-        h2 Decorators
+        code.language-css
+          pre.
+            details[open] {
+              decorator: url(#details-open);
+            }
 
       section
-        h2 [Explain decorators, show code]
+        code.language-markup
+          pre.
+            <details open>
+                <summary>Timepieces</summary>
+                <ul>
+                  <li>Sundial
+                  <li>Cuckoo clock
+                  <li>Wristwatch
+                </ul>
+            </details>
 
       section
-        h2 Specification Status
-        h2 N/A
-      // Discuss polyfills
-
-      section 
-        h2 Polyfills
+        img(src="img/rendered-decorator.png")
 
       section
-        h2 [previously Dimitry's polyfill, now polymer project]
-
-      section
-        h2 [explain what it polyfills and what it doesn't]
+        img(src="img/custom-elements-decorators.png")
 
       // Discuss frameworks and libraries
 
       section
-        h2 Libraries and Frameworks
+        h2 Polyfills, Libraries, and Frameworks
 
       section
         h2 X-Tags and Brick
 
       section
-        h2 [examples]
+        code.language-markup
+          pre.
+            <!DOCTYPE html>
+            <html>
+              <head>
+                <!-- 1. Load X-Tags/Brick Stuff -->
+                <link rel="stylesheet" type="text/css" href="brick-1.0beta8.css"/>
+                <script type="text/javascript" src="brick-1.0beta8.js"></script>
+              </head>
+              <body>
+                <!-- 2. Declare the component by its tag. -->
+                <x-datepicker></x-datepicker>
+              </body>
+            </html>
 
       section
-        h2 Pros and Cons
+        h2 Polymer Project
 
       section
-        h2 Polymer project
+        h2 web components + sugar
+        h2 e.g. MDV, Pointer Events
 
       section
-        h2 Obligatory mention: Angular
+        code.language-markup
+          pre.
+            <!DOCTYPE html>
+            <html>
+              <head>
+                <!-- 1. Load Polymer -->
+                <script src="polymer.min.js"></script>
+                <!-- 2. Load a component -->
+                <link rel="import" href="x-foo.html">
+              </head>
+              <body>
+                <!-- 3. Declare the component by its tag. -->
+                <x-foo></x-foo>
+              </body>
+            </html>
 
       section
-        h2 Obligatory mention: Ember
+        h2 Polymer: 168k 
+        h2 Angular: 81k
+        h2 X-Tag: 63k
 
       section
-        h2 For fun: Angular + X-Tags
+        h2 The Price of Compatibility
 
       section
-        h2 Resources for Web Components
+        h2 Obligatory mention: Angular Directives
 
       section
-        h2 [List of links!]
+        code.language-markup
+          pre.
+            <!-- 1: as an attribute declaration -->
+            <a custom-button>Click me</a>
+
+            <!-- 2: as a custom element -->
+            <custom-button>Click me</custom-button>
+
+            <!-- 3: as a class (used for old IE compat) -->
+            <a class="custom-button">Click me</a>
 
       section
-        h2 Conclusion
+        code.language-javascript
+          pre.
+            myApp.directive('customButton', function () {
+              return {
+                templateUrl: 'templates/customButton.html'
+                // directive stuff...
+              };
+            });
+
+      section
+        h2 Obligatory mention: Ember Components
+
+      section
+        img(src="img/browserponies.png", class="full-height")
+
+      section
+        h2 The Extensible Web Manifesto
+        h3 Tighten the feedback look between devs and spec!
+        a(href="http://extensiblewebmanifesto.org/")
+          h3 Identify patterns in dev? Give feedback.
+
+      section
+        h2 Before I go: SOMETHING AWESOME
+        h2 
+          a(href="http://flathead.herokuapp.com/designer") Mozilla AppMaker
+
+      section.list
+        h2 Choice Resources
+        ul
+          li
+            a(href="https://dvcs.w3.org/hg/webcomponents/raw-file/ccd579693e46/explainer/index.html")
+              h3 Web Components Explainer
+          li
+            a(href="http://flathead.herokuapp.com/designer") 
+              h3 Mozilla AppMaker
+          li
+            a(href="http://www.x-tags.org/")
+              h3 Mozilla X-Tags
+          li
+            a(href="http://mozilla.github.io/brick/")
+              h3 Mozilla Brick
+          li
+            a(href="http://www.polymer-project.org/")
+              h3 Polymer Project
+          li 
+            a(href="http://html5-demos.appspot.com/static/shadowdom-visualizer/index.html") 
+              h3 Shadow DOM Visualizer
+          li 
+            a(href="http://www.html5rocks.com/en/tutorials/webcomponents/shadowdom/") 
+              h3 HTML5 Rocks - Shadow DOM 101
+          li
+            a(href="http://www.html5rocks.com/en/tutorials/webcomponents/shadowdom-201/")
+              h3 HTML 5 Rocks - Shadow DOM 201
+          li
+            a(href="http://www.html5rocks.com/en/tutorials/webcomponents/shadowdom-301/")
+              h3 HTML 5 Rocks - Shadow DOM 301
+          li
+            a(href="http://www.html5rocks.com/en/tutorials/webcomponents/customelements/") 
+              h3 HTML5 Rocks - Custom Elements
 
       // End Slide
 
-      section
-        h2 Thanks Fronteers!
-        h2 love,
-        h2 Angelina Fabbro
-        h2 @angelinamagnum
-        h2 angelina@mozilla.com
+      section.cover
+        img(src="img/finale.gif")
+        div.right
+          div.tint
+            h2 Thanks Fronteers!
+            h2 love,
+            h2 Angelina Fabbro
+            h2 @angelinamagnum
+            h2 angelina@mozilla.com
         
-
-      section
-        h2 Bullet List
-        h3.bullet Powered by <a href="https://github.com/markdalgleish/bespoke-bullets">bespoke-bullets</a>
-        ul
-          li Bullet 1
-          li Bullet 2
-          li Bullet 3
-
-      section
-        h2 Syntax Highlighting
-        h3.bullet Powered by <a href="http://twitter.com/LeaVerou">Lea Verou</a>'s <a href="https://github.com/LeaVerou/prism">Prism</a>
-        hr
-        code.language-javascript
-          pre.
-            bespoke.horizontal.from('article', {
-              bullets: 'li, .bullet',
-              hash: true,
-              state: true
-            });
-
-      section(data-bespoke-hash='named-route')
-        h2 Named Route
-        h3.bullet Powered by <a href="https://github.com/markdalgleish/bespoke-hash">bespoke-hash</a>
-        p Look up! This route has been named with a <em>'data-bespoke-hash'</em> attribute.
-
-      section(data-bespoke-state='emphatic')
-        h2 Emphatic Slide!
-        h3.bullet Powered by <a href="https://github.com/markdalgleish/bespoke-state">bespoke-state</a>
-
-      section
-        h2.bullet Just the beginning...
-        hr
-        ul
-          li Edit <a href="http://jade-lang.com/">Jade</a> markup in <em>'src/index.jade'</em>
-          li Edit <a href="http://learnboost.github.io/stylus/">Stylus</a> styles in <em>'src/styles/main.styl'</em>
-          li Edit JavaScript in <em>'src/scripts/main.js'</em>
-        hr
-        ul
-          li
-            strong Enjoy! :)
-            a(href='http://twitter.com/markdalgleish')  -@markdalgleish
-
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
     script(src='bower_components/bespoke-bullets/dist/bespoke-bullets.min.js')
     script(src='bower_components/bespoke-hash/dist/bespoke-hash.min.js')
     script(src='bower_components/bespoke-state/dist/bespoke-state.min.js')
     script(src='bower_components/prism/prism.js')
+    script(src='bower_components/prism/plugins/line-numbers/prism-line-numbers.min.js')
     script(src='scripts/main.js')
