--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -4,7 +4,7 @@
 
 slide_width = 100%
 slide_height = 100%
-slide_background = #eaeaea
+slide_background = #0000
 
 slide_transition_length = .6s
 slide_transition_easing = ease
@@ -120,26 +120,32 @@ code
 // content styles
 
 body
-  font-family: helvetica, arial, sans-serif
+  font-family: 'Noto Serif', serif;
   font-size: 18px
-  color: #404040
+  color: #F3F2FC
+  background: #000000;
+
+h1, h2
+  font-family: 'Pathway Gothic One', sans-serif;
+
+h3.fancy
+  font-family: 'Noto Serif', serif;
 
 h1
-  font-size: 72px
-  line-height: 82px
+  font-size: 82px
+  line-height: 92px
   letter-spacing: -2px
   margin-bottom: 16px
 
 h2
-  font-size: 42px
+  font-size: 52px
   letter-spacing: -1px
-  margin-bottom: 8px
+  margin-bottom: 36px
 
 h3
-  font-size: 24px
+  font-size: 34px
   font-weight: normal
   margin-bottom: 24px
-  color: #606060
 
 hr
   visibility: hidden
@@ -158,3 +164,96 @@ p
 a
   color: #0093CC
   text-decoration: none
+
+section.black
+  background: #000000
+
+section.white
+  background: #FFFFFF
+  color: #000
+
+section.sublime
+  background: #272822
+
+section.light-grey
+  background: #eeeeee
+
+section.cover 
+  z-index: 0
+  background:#000000
+  overflow:hidden
+
+section.cover:before 
+  display:none
+
+section.cover img
+  position:absolute;
+  top:0
+  left:17%
+  z-index:-1
+  height:100%
+  -webkit-transform:translateX(-50%)
+  -moz-transform:translateX(-50%)
+  -ms-transform:translateX(-50%)
+  -o-transform:translateX(-50%)
+  transform:translateX(-50%)
+
+  -webkit-transform: scale(2);
+  -moz-transform: scale(2);
+  -ms-transform: scale(2);
+  -o-transform: scale(2);
+  transform: scale(2);
+
+section.cover img.exception
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+
+
+section.cover .tint
+  background: rgba(0, 0, 0, 0.7)
+  padding: 30px
+
+img.full-height
+  height: 100%
+
+// Particular custom shit
+
+section.special-blue
+  background: #000
+  
+
+.host-example
+  float: block
+  padding: 40px
+  border: 5px dotted purple
+  height: 540px
+
+
+.host-example li
+  text-align: center
+  clear: left;
+
+.maybe
+  color: yellow
+
+.yay
+  color: green
+
+.boo
+  color: red
+
+div.right
+  margin-right: -50%
+
+section.list h3
+  font-size: 110%
+
+.pony
+  display: block;
+  margin-top: 30px
+
+section.title
+  background: #363636
